Fix mobile website text container overflow - 2

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -104,6 +104,15 @@
   .logo {
     font-size: 1.75rem;
   }
+
+  #profile {
+    display: block;
+    padding: 0 1rem;
+  }
+  
+  .section__text {
+    margin: 2rem auto 0 auto;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -111,10 +120,10 @@
   footer {
     height: 40vh;
   }
-  #profile {
+  /* #profile {
     height: 80vh;
     margin-bottom: 0;
-  }
+  } */
   article {
     font-size: 1rem;
   }
@@ -183,6 +192,16 @@
   
   .section__text__p2 {
     font-size: 1rem;
+  }
+  #profile {
+    padding: 0 0.5rem;
+  }
+  
+  .section__text {
+    padding: 2rem 1.5rem;
+    min-width: auto;
+    width: 90%;
+    margin: 2rem auto 0 auto;
   }
 }
 
